k8s-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: k8s-gateway
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  infrastructure:
    parametersRef:
      group: gateway.nginx.org
      kind: NginxProxy
      name: k8s-proxy-config
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    hostname: "*.k8s.gpm.my.id"
    allowedRoutes:
      namespaces:
        from: All
