secure-gateway.yaml
# This manifest will help to assign the NGF data plane pods into the control-plane and defining the NodePorts
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: secure-gateway
  namespace: nginx-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: nginx
  infrastructure:
    parametersRef:
      group: gateway.nginx.org
      kind: NginxProxy
      name: secure-proxy-config
  listeners:
  - name: http
    port: 80
    protocol: HTTP
  - name: https
    port: 443
    protocol: HTTPS
    hostname: "*.secure.gpm.my.id"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: secure-gateway-secret
