secure-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: secure-route
  namespace: httpbin
spec:
  parentRefs:
  - name: secure-gateway
    sectionName: http
    namespace: nginx-gateway
  hostnames:
  - "rujak.secure.gpm.my.id"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: httpbin
      port: 8000
---
